<resources>
    <string name="app_name">Registration</string>

    <!--  registration Label  -->
    <string name="userRegistrationLabel">User Registration</string>

    <string name="userNameText">Username</string>
    <string name="documentID">Document ID</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="colon">:</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <!--  sendButton  -->
    <string name="sendButton">NEXT</string>
    <string name="backButton">SUBMIT</string>

</resources>